--- a/server/templates/display-cases.html
+++ b/server/templates/display-cases.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <h1><img src="/templates/robot_logo.png" height="40px">AI-Assisted Intake: View Cases</h1>
-        <h3>View your cases or assign new cases to yourself.</h3>
+        <h3>View your cases or assign new cases to yourself. Click on any word in the column to go to that case.</h3>
         <a href="/index" class="button lawyerView" id="lawyerView" style="display:inline-block">Main Page</a>
         <a href="/log-out" class="button logoutButton" id="logoutButton" style="display:inline-block">Logout</a>
         <div id="loginForm">
