--- a/server/templates/display-cases.html
+++ b/server/templates/display-cases.html
@@ -10,14 +10,13 @@
 <script>
     var GLOBALS = {
         lawyerId: "{{.lawyer_id}}"
-     }; // Check to make sure lawyerID passed from the server before loading rest of page.
-    // alert(GLOBALS.lawyerId)
+     }; //Save lawyerId as a GLOBAL variable
 </script>
 
 <body>
     <div class="container">
         <h1><img src="/templates/robot_logo.png" height="40px">AI-Assisted Intake: View Cases</h1>
-        <h3>View your cases or assign new cases to yourself. Click on any word in the column to go to that case.</h3>
+        <h3>View your cases or assign new cases to yourself. Click on any of your assigned cases to go to the case. You will not be able to access cases to which you are not assigned, but you may assign them to yourself.</h3>
         <a href="/index" class="button lawyerView" id="lawyerView" style="display:inline-block">Main Page</a>
         <a href="/log-out" class="button logoutButton" id="logoutButton" style="display:inline-block">Logout</a>
         <div id="loginForm">
