--- a/server/templates/style.css
+++ b/server/templates/style.css
@@ -61,7 +61,7 @@ input[type="submit"] {
       
 }   
 
-.loginButton, .logoutButton, .lawyerView {
+.loginButton, .logoutButton, .lawyerView, .deleteMeeting {
   padding: 5px 10px; 
   font-size: 14px; 
   position: absolute;
@@ -80,6 +80,10 @@ input[type="submit"] {
 .lawyerView{
     right:90px;
     display: none;
+}
+
+.deleteMeeting{
+    right:200px;
 }
 
 .button:hover, .loginButton:hover, input[type="submit"]:hover {
@@ -369,3 +373,67 @@ table tr td a.table-link:hover {
     cursor: default; /* Changes cursor to default to indicate non-interactivity */
 }
 
+#lawyerNotesSection {
+    margin-top: 10px;
+    text-align: center;
+    width:100%;
+}
+
+#lawyerNotes {
+    width: 100%;
+    height: 120px; /* Adjusted to be around 6 lines tall */
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 2px solid #007bff; 
+    border-radius: 8px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Ensuring font consistency */
+    font-size: 16px; /* Comfortable reading size */
+    resize: vertical;
+}
+
+.saveNotes {
+    font-weight: bold; /* Make the text a bit bolder */
+    background-color: #28a745; /* A green background for a 'Save' button */
+    border-color: #28a745; /* Matching border color */
+}
+
+.saveNotes:hover {
+    background-color: #218838; /* Darker green on hover for feedback */
+    border-color: #1e7e34; /* Matching darker border */
+}
+
+.bigger-microphone {
+    font-size: 100px; /* Increase the font size to make the icon bigger */
+    margin-top: 0px; /* Adjust the margin as needed */
+}
+
+#aiResponse {
+    width: 95%;
+    margin: 20px auto;
+    background-color: #000;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#aiResponse p, #aiResponseContent {
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace; /* Gives a computer-y feel */
+    font-size: 20px;
+    text-align: left;
+}
+
+#aiResponseContent h4 {
+    font-size: 24px;
+}
+
+@keyframes fadeInOut {
+    0%, 100% { opacity: 0; }
+    50% { opacity: 1; }
+}
+
+#loadingMessage {
+    animation: fadeInOut 2s linear infinite; /* Fades in and out */
+    padding: 10px 0;
+}
