--- a/server/templates/style_recorder.css
+++ b/server/templates/style_recorder.css
@@ -24,7 +24,7 @@
     }
     .audio-recording-container {
         width: 100%;
-        height: 100vh;
+        height: auto;
         /* view port height*/
         /*targeting Chrome & Safari*/
         display: -webkit-flex;
@@ -35,9 +35,10 @@
         justify-content: center;
         /*horizontal centering*/
         align-items: center;
+        margin-top: 10px;
     }
     .start-recording-button {
-        font-size: 70px;
+        font-size: 140px;
         color: #435f7a;
         cursor: pointer;
         opacity: .5;
@@ -209,7 +210,7 @@
         display: none;
     }
     .text-indication-of-audio-playing-container {
-        height: 20px;
+        height: 0px;
     }
     .text-indication-of-audio-playing {
         font-size: 20px;
