--- a/server/templates/display-cases.html
+++ b/server/templates/display-cases.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Enables the lawyer to view all of the cases either assigned to them or unassigned  -->
+<!-- Original for this project, ChatGPT assisted with development-->
 <html lang="en">
 
 <head>
