--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Enables client intake and button for lawyer login  -->
+<!-- Original for this project, ChatGPT assisted with development-->
 <html lang="en">
 
 <head>
