--- a/server/templates/intake.html
+++ b/server/templates/intake.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<!-- Enables the lawyer to conduct an intake meeting with a client -->
 <!-- Recording portion of file based on "how to record audio in JavaScript by Reema Alzohairi -->
 <!-- https://ralzohairi.medium.com/audio-recording-in-javascript-96eed45b75ee -->
-<!-- Modifications made for the purposes of this project. -->
-<!-- Remainder of file is original for this project, with assistance from ChatGPT -->
+<!-- The rest of the file is original for this project (ChatGPT assitance utilized) -->
+
 <html lang="en">
 
 <head>
@@ -49,7 +50,7 @@
 
         </div>
         
-
+    <!--This part is from Alzohairi-->    
     <div class="audio-recording-container">
      
         <i class="start-recording-button fa fa-microphone bigger-microphone" aria-hidden="true"></i>
@@ -74,8 +75,8 @@
 
     <audio controls class="audio-element hide">
     </audio>
+    <!--End of part from Alzohairi-->
 
-    <!-- Place this section where you want the AI response to appear -->
     <div id="aiResponse" style="display:none">
         <p id="loadingMessage" style="display:none">Loading AI response...</p>
         <div id="aiResponseContent"></div>
