--- a/server/templates/lawyer-login.html
+++ b/server/templates/lawyer-login.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Enables client ilawyer login  -->
+<!-- Original for this project, ChatGPT assisted with development-->
 <html lang="en">
 
 <head>
