--- a/server/templates/meeting-details.html
+++ b/server/templates/meeting-details.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- Enables the lawyer to view details of a particular meeting, including ChatGPT responses -->
+<!-- Original for this project, ChatGPT assisted with development-->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
