--- a/server/templates/new-account.html
+++ b/server/templates/new-account.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Page for creating a new lawyer account-->
+<!-- Original for this project, ChatGPT assisted with development-->
 <html lang="en">
 
 <head>
