--- a/server/templates/style_recorder.css
+++ b/server/templates/style_recorder.css
@@ -1,6 +1,8 @@
 
 /* This file is based the style.css document in "How to record audio in JavaScript" by Reema Alzohairi *
- https://ralzohairi.medium.com/audio-recording-in-javascript-96eed45b75ee */
+ https://ralzohairi.medium.com/audio-recording-in-javascript-96eed45b75ee 
+ NOT original for this project.
+ */
 
 /* Audio recorder portion */
 /* Small Devices*/
