--- a/server/templates/font-awesome.css
+++ b/server/templates/font-awesome.css
@@ -1,6 +1,8 @@
 /*!
  *  Font Awesome 4.6.2 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ *  CSS for the font-awesome icons used on the intake (recording) page
+ *  This is NOT original code for this project
  */
  @font-face {
     font-family: 'FontAwesome';
