--- a/server/templates/intake.html
+++ b/server/templates/intake.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Enables the lawyer to conduct an intake meeting with a client -->
-<!-- Recording portion of file based on "how to record audio in JavaScript by Reema Alzohairi -->
+<!-- Recording portion of file based on "How to record audio in JavaScript" by Reema Alzohairi -->
 <!-- https://ralzohairi.medium.com/audio-recording-in-javascript-96eed45b75ee -->
 <!-- The rest of the file is original for this project (ChatGPT assitance utilized) -->
 
